<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TitleMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/MainTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="?colorPrimary" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubtitleMain"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="?colorPrimary"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"

            />

        <TextView
            android:id="@+id/AnimalsMain"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:text="@string/AnimalsTitleMain"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="?colorPrimary"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/animalmain"></ImageView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowAnimals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMain_showAnimals"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/OrganizationsMain"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:text="@string/OrganizationsMain"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="?colorPrimary"
            android:layout_marginLeft="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/organizationmain"></ImageView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowOrganizations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMain_showOrganizations"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/FavoritesMain"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:text="@string/favoritesMain"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="?colorPrimary"
            android:layout_marginLeft="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/favoritesmain"></ImageView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShowFavorites"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>